{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 14,
  "lineage": "73fe9e7d-8853-619b-0d26-ac4f42cc7550",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-07T08:06:06.519-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-02-694fde51cac2/global/firewalls/allow-iap-ssh",
            "log_config": [],
            "name": "allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-694fde51cac2/global/networks/vote-app-vpc",
            "params": [],
            "priority": 1000,
            "project": "qwiklabs-gcp-02-694fde51cac2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-694fde51cac2/global/firewalls/allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "redis-proxy"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6379"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-07T08:06:06.710-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-02-694fde51cac2/global/firewalls/allow-redis-proxy-6379",
            "log_config": [],
            "name": "allow-redis-proxy-6379",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-694fde51cac2/global/networks/vote-app-vpc",
            "params": [],
            "priority": 1000,
            "project": "qwiklabs-gcp-02-694fde51cac2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-694fde51cac2/global/firewalls/allow-redis-proxy-6379",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "redis-proxy"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "google_managed_services_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.50.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-11-07T08:24:17.738-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/qwiklabs-gcp-02-694fde51cac2/global/addresses/google-managed-services-range",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "google-managed-services-range",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-694fde51cac2/global/networks/vote-app-vpc",
            "prefix_length": 20,
            "project": "qwiklabs-gcp-02-694fde51cac2",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-694fde51cac2/global/addresses/google-managed-services-range",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-02-694fde51cac2/global/networks/vote-app-vpc",
            "mtu": 0,
            "name": "vote-app-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "4016687911182509607",
            "numeric_id": "4016687911182509607",
            "project": "qwiklabs-gcp-02-694fde51cac2",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-694fde51cac2/global/networks/vote-app-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-07T08:06:08.010-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/qwiklabs-gcp-02-694fde51cac2/regions/us-east1/routers/default-router",
            "name": "default-router",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-694fde51cac2/global/networks/vote-app-vpc",
            "project": "qwiklabs-gcp-02-694fde51cac2",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-694fde51cac2/regions/us-east1/routers/default-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "qwiklabs-gcp-02-694fde51cac2/us-east1/default-router/default-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "default-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "qwiklabs-gcp-02-694fde51cac2",
            "region": "us-east1",
            "router": "default-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251014",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-694fde51cac2/zones/us-east1-d/disks/redis-proxy"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-07T08:08:06.601-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-02-694fde51cac2/zones/us-east1-d/instances/redis-proxy",
            "instance_id": "3282449933237725065",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "hl845UKGHM4=",
            "metadata_startup_script": "#!/bin/bash\nsudo apt-get update -y\nsudo apt-get install -y redis-tools\n",
            "name": "redis-proxy",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-694fde51cac2/global/networks/vote-app-vpc",
                "network_ip": "10.142.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-694fde51cac2/regions/us-east1/subnetworks/vote-app-vpc",
                "subnetwork_project": "qwiklabs-gcp-02-694fde51cac2"
              }
            ],
            "project": "qwiklabs-gcp-02-694fde51cac2",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-694fde51cac2/zones/us-east1-d/instances/redis-proxy",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "redis-proxy"
            ],
            "tags_fingerprint": "dsMOVQcXWuY=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-east1-d"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_firewall.allow_iap_ssh",
            "module.network.google_compute_firewall.allow_redis",
            "module.network.google_compute_global_address.google_managed_services_range",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_service_networking_connection.private_vpc_connection"
          ]
        }
      ]
    }
  ]
}